--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Matt Burgess - Software Engineer</title>
+        <title>Matt Burgess - Devolper</title>
         <meta name="description" content="Hi! It's Matt Burgess here. I'm an experienced PHP developer with a wide range of SaaS skills looking to move my focus to infrastructure automation and architecture.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
